audit(java): the whole pinning narrative was inverted — JEP 491 killed it in Java 24
Units 157 (structured_concurrency_and_loom) and 158 (testing_junit_mockito). The agent
downloaded Temurin JDK 26.0.2 and built a JUnit 6.1.2 / Mockito 5.23.0 Maven project, so
the claims below are measured, not inferred.

THE PINNING NARRATIVE WAS BACKWARDS (11x ShutdownOnFailure, 6x throwIfFailed,
7x jdk.tracePinnedThreads). Measured both ways: JDK 23, 200 tasks x 100ms inside
`synchronized` on 8 carriers -> 2,604ms / 77 req/s. JDK 26, same code -> 115ms /
1,739 req/s. JEP 491 (Java 24) made `synchronized` and `Object.wait()` stop pinning and
removed the `jdk.tracePinnedThreads` property; setting it on JDK 26 produced no output.
Rewrote §1/§3/§4.1/§6.2/§8/§9/§10/§13/Q2/Q13 around native-frame pinning, the mechanism
that still pins, and re-grounded the arithmetic with a real FFM downcall: 64 threads x
100ms -> 840ms / 76 req/s vs Thread.sleep at 610 req/s. That 8.0x gap equals the carrier
count and lands within 5% of the file's own carriers/blocking_time model, so the model
survives while its example no longer does.

I independently confirmed both JEP claims before committing, because version assertions
are the highest-risk class here: JEP 491 is Synchronize Virtual Threads without Pinning
(JDK 24, removes jdk.tracePinnedThreads), and JEP 525 is Structured Concurrency (Sixth
Preview, JDK 26). The agent's summary said "JEP 533 / Java 27" — that slip is in the
summary only; the file says JEP 525 / Java 26 and is correct.

TWO FABRICATED ATTRIBUTIONS:
  - "HikariCP 5.1.0+ replaced its internal synchronized with StampedLock" appears nowhere
    in HikariCP's CHANGES; ConcurrentBag uses a SynchronousQueue, and current HikariCP is
    7.1.0. Also removed an invented spring.datasource.hikari.keepalive-time claim.
  - Q13's lettuce 6.1->6.3 incident named versions and an internal rewrite, is
    unsourceable, and post-JEP-491 describes the wrong mechanism anyway. Replaced with a
    labelle